erDiagram
    %% Owner Level
    OWNER ||--o{ ADMIN : manages
    OWNER ||--o{ STORE : oversees
    
    %% Core Business Structure
    STORE ||--o{ LOCATION : has
    STORE ||--o{ USER : has
    STORE ||--o{ SUBSCRIPTION : has
    ADMIN ||--o{ STORE : manages

    %% Location Relations
    LOCATION ||--o{ CATEGORY : has
    LOCATION ||--o{ ORDER : processed_at
    LOCATION ||--o{ EMPLOYEE : assigned_to

    %% Product Structure
    CATEGORY ||--o{ ITEM : contains
    ITEM ||--o{ ORDER_ITEM : includes
    
    %% Order Structure
    ORDER ||--o{ ORDER_ITEM : contains

    OWNER {
        int id PK
        string full_name
        string email
        string password_hash
        datetime last_login
        boolean is_active
    }

    STORE {
        int id PK
        int admin_id FK
        int owner_id FK
        string name
        string business_type
        string address
        string contact_number
        string registration_number
        datetime created_at
        boolean is_active
    }

    SUBSCRIPTION {
        int id PK
        int store_id FK
        date start_date
        date end_date
        decimal amount
        string payment_status
        datetime last_payment_date
        datetime next_billing_date
    }

    USER {
        int id PK
        int store_id FK
        int location_id FK
        string email
        string password_hash
        string role
        boolean is_active
        datetime last_login
        datetime created_at
    }

    EMPLOYEE {
        int id PK
        int store_id FK
        int location_id FK
        string full_name
        string position
        string contact_number
        string email
        date hire_date
        boolean is_active
        decimal base_salary
        string employment_status
    }

    LOCATION {
        int id PK
        int store_id FK
        string name
        string address
        string contact_number
        boolean is_active
    }

    CATEGORY {
        int id PK
        int location_id FK
        string name
        string description
        boolean is_active
    }

    ITEM {
        int id PK
        int category_id FK
        string name
        string description
        decimal price
        string barcode
        int quantity
        datetime last_inventory_update
        boolean is_active
    }

    ORDER {
        int id PK
        int store_id FK
        int location_id FK
        int user_id FK
        int employee_id FK
        datetime order_date
        string status
        decimal total_amount
        string payment_status
    }

    ORDER_ITEM {
        int id PK
        int order_id FK
        int item_id FK
        int quantity
        decimal unit_price
        decimal subtotal
    }

    ADMIN {
        int id PK
        int owner_id FK
        string full_name
        string email
        string password_hash
        datetime last_login
        boolean is_active
    }